--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-cli": ">=5.0.1"
   },
   "dependencies": {
+    "latest-version": "^7.0.0",
     "moment": ">=2.29.4",
     "prop-types": ">=15.8.1",
     "react": "^18.2.0",
